# agentbench

./: .coverage  README.md  pyproject.toml
challenges/easy/: csv-analyzer.yaml  file-organizer.yaml  json-validator.yaml  markdown-converter.yaml  password-gen.yaml
challenges/hard/: chat-server.yaml  git-analyzer.yaml  search-engine.yaml  task-queue.yaml  workflow-engine.yaml
challenges/medium/: bookmark-api.yaml  key-value-store.yaml  rate-limiter.yaml  task-scheduler.yaml  url-shortener.yaml
examples/: sample_claude_results.json  sample_report.md
src/agentbench/: __init__.py  cli.py  loader.py  models.py  report.py  runner.py
src/agentbench/adapters/: __init__.py  base.py  claude_code.py  manual.py
src/agentbench/metrics/: __init__.py  build.py  coverage.py  quality.py  tests.py
tests/: conftest.py  helpers.py  test_cli.py  test_loader.py  test_models.py  test_report.py  test_runner.py  test_scoring.py
